# wGac

./: .gitignore  CMakeLists.txt  README.md  wgac.c
Source/: WGacController.cpp  WGacController.cpp.tmp.4800.1766893912066  WGacController.h  WGacCursor.cpp  WGacCursor.h  WGacGacView.cpp  WGacGacView.h  WGacNativeWindow.cpp  WGacNativeWindow.h  WGacView.cpp  WGacView.h  WGacWindow.cpp  WGacWindow.h  WGacWindowView.cpp  WGacWindowView.h  main.cpp
Source/Renderers/: ElementRenderers.cpp  ElementRenderers.h  WGacRenderer.cpp  WGacRenderer.h  WGacRendererImpl.cpp
Source/Services/: WGacAsyncService.cpp  WGacAsyncService.h  WGacCallbackService.cpp  WGacCallbackService.h  WGacClipboardService.cpp  WGacClipboardService.h  WGacDialogService.cpp  WGacDialogService.h  WGacImageService.cpp  WGacImageService.h  WGacInputService.cpp  WGacInputService.h  WGacResourceService.cpp  WGacResourceService.h  WGacScreenService.cpp  WGacScreenService.h
Source/Wayland/: IWaylandWindow.h  WaylandBuffer.cpp  WaylandBuffer.h  WaylandDisplay.cpp  WaylandDisplay.h  WaylandSeat.cpp  WaylandSeat.h
Tests/: App.cpp  CMakeLists.txt
Tests/GacUI_ControlTemplate/WindowSkin/: CMakeLists.txt
Tests/GacUI_Controls/AddressBook/: CMakeLists.txt
Tests/GacUI_Controls/Animation/: CMakeLists.txt
Tests/GacUI_Controls/CalculatorAndStateMachine/: CMakeLists.txt
Tests/GacUI_Controls/ColorPicker/: CMakeLists.txt
Tests/GacUI_Controls/ContainersAndButtons/: CMakeLists.txt
Tests/GacUI_Controls/DataGrid/: CMakeLists.txt
Tests/GacUI_Controls/DocumentEditorRibbon/: CMakeLists.txt
Tests/GacUI_Controls/DocumentEditorToolstrip/: CMakeLists.txt
Tests/GacUI_Controls/GlobalHotKey/: CMakeLists.txt
Tests/GacUI_Controls/ListControls/: CMakeLists.txt
Tests/GacUI_Controls/Localization/: CMakeLists.txt
Tests/GacUI_Controls/MenuVisibility/: CMakeLists.txt
Tests/GacUI_Controls/ProgressAndAsync/: CMakeLists.txt
Tests/GacUI_Controls/QueryService/: CMakeLists.txt
Tests/GacUI_Controls/TextEditor/: CMakeLists.txt
Tests/GacUI_Controls/TriplePhaseImageButton/: CMakeLists.txt
Tests/GacUI_HelloWorlds/Cpp/: CMakeLists.txt
Tests/GacUI_HelloWorlds/CppXml/: CMakeLists.txt
Tests/GacUI_HelloWorlds/MVVM/: CMakeLists.txt
Tests/GacUI_Layout/Alignment/: CMakeLists.txt
Tests/GacUI_Layout/Flow/: CMakeLists.txt
Tests/GacUI_Layout/Responsive1/: CMakeLists.txt
Tests/GacUI_Layout/Responsive2/: CMakeLists.txt
Tests/GacUI_Layout/RichTextEmbedding/: CMakeLists.txt
Tests/GacUI_Layout/SharedSize/: CMakeLists.txt
Tests/GacUI_Layout/Stack/: CMakeLists.txt
Tests/GacUI_Layout/Table/: CMakeLists.txt
Tests/GacUI_Layout/TableSplitter/: CMakeLists.txt
Tests/GacUI_Xml/Binding_Bind/: CMakeLists.txt
Tests/GacUI_Xml/Binding_Eval/: CMakeLists.txt
Tests/GacUI_Xml/Binding_Format/: CMakeLists.txt
Tests/GacUI_Xml/Binding_Uri/: CMakeLists.txt
Tests/GacUI_Xml/Binding_ViewModel/: CMakeLists.txt
Tests/GacUI_Xml/Event_Cpp/: CMakeLists.txt
Tests/GacUI_Xml/Event_Script/: CMakeLists.txt
Tests/GacUI_Xml/Event_ViewModel/: CMakeLists.txt
Tests/GacUI_Xml/Instance_Control/: CMakeLists.txt
Tests/GacUI_Xml/Instance_MultipleWindows/: CMakeLists.txt
Tests/GacUI_Xml/Instance_Window/: CMakeLists.txt
Tests/GacUI_Xml/Member_Field/: CMakeLists.txt
Tests/GacUI_Xml/Member_Parameter/: CMakeLists.txt
Tests/GacUI_Xml/Member_Property/: CMakeLists.txt
Tests/GacUI_Xml/Misc_ImportFolder/: CMakeLists.txt
